@@ -9,6 +9,7 @@ trunk
 * mxModel(remove=TRUE) accepts both character names or S4 named entities.
 * added support for x86_64 on OS X 10.6 (snow leopard)
 * fixed support for x86_64 on Ubuntu 9.10 (gcc 4.4)
+* throw error message when inserting a named entity into a model with an identical name
 
 Release 0.2.2-951
 =================
